# upenn-cis-194

./: .gitignore  README.md
Assignments/: hw1.hs
hw/: LICENSE  hw.cabal
hw/src/: HW1.hs
hw/test/: HW1Spec.hs  Spec.hs
