name:                hw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/omegaphoenix/hw#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Leong
maintainer:          justinleong16@gmail.com
copyright:           CC BY
category:            Omega level
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hw-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw
  default-language:    Haskell2010

test-suite hw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/omegaphoenix/hw
